syntax = "proto3";
package com.crd.common.grpc;
//import "google/protobuf/any.proto";

message PriceRequest {
    int64 tradeId = 1;
}

message PriceResponse {
    double price = 1;
}

message ErrorDetail {
  // Error code
  string errorCode = 1;
  //Error message
  string message = 2;
  // Additional metadata associated with the Error
  map<string, string> metadata = 3;
}
